OS2.1/CPinti/include/core.h

extern "C" void Interruption_Timer(long signal);
#define ENTRER_SectionCritique cpinti::gestionnaire_tache::begin_SectionCritique
#define SORTIR_SectionCritique cpinti::gestionnaire_tache::end_SectionCritique
		
		
		/**** Methodes ****/
		bool 				initialiser_Multitache		();
		void		 		IamInLive					();
		unsigned long 		get_cycle_cpu				();
		unsigned long 		get_cycle_MAX_cpu			();
		void				eval_cycle_cpu				();
		
		/** Threads **/
		unsigned long 		ajouter_Thread				(void* (* Fonction) (void* arg), const char* NomThread, unsigned long pid, long Priorite, unsigned long Arguments);
		bool 				free_Thread_zombie			(unsigned long tid);
		unsigned long 		check_Thread_zombie			(bool liberer, bool debug);
		void 				Interruption_Timer			(long sig);
		void 				switch_context				();
		
		unsigned long 		get_ID_Thread				();
		unsigned long 		get_ThreadEnCours			();
		
		
		
		void 				begin_SectionCritique		();
		void 				end_SectionCritique			();
		bool 				state_SectionCritique		();
		
		
		
		void 				loop_MAIN();
		
		/**** TIMER ****/
		
		static bool initialiser_PIT(long frequence);
		static unsigned long ajouter_Timer(unsigned long fonction);
		static bool demarrer_SCHEDULER(unsigned long id_TIMER, long temps_us);
		static bool stop_SCHEDULER(long id_TIMER);
		static bool initialiser_PIT(long frequence, long Intervalle_INTERNE);
		unsigned long 		get_NombreTimer				();