OS2.1/CPinti/include/IO.h

		// EXTERNE
		bool 					cpinti_Fichier_Existe			(const char* Source);
		unsigned long			cpinti_Taille_Fichier			(const char* Source);
		bool 					cpinti_Lire_Fichier_complet		(const char* Source, const char* Mode, char* _DONNEES, unsigned long TailleFichier);
		bool 					cpinti_Ecrire_Fichier_complet	(const char* Source, const char* _DONNEES, long Mode);
		bool 					cpinti_Supprimer_Fichier		(const char* Source, bool Securise, long NombrePasses);
		bool 					cpinti_Copier_Fichier			(const char* Source, const char* Destination, long Priorite, const char* VAR_Progression, const char* VAR_Octets, const char* VAR_OctetsParSec, const char* VAR_Annuler, double cle_contexte);